--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adminbot",
+  "name": "adminboot",
   "version": "0.0.1",
   "description": "",
   "main": "bot.js",
@@ -9,7 +9,6 @@
   "author": "ByNejdet",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "util": "^0.11.0"
+    "chalk": "^2.4.1"
   }
 }
