--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "adminboot",
+  "name": "discordbotdersleri",
   "version": "0.0.1",
   "description": "",
   "main": "bot.js",
   "scripts": {
     "test": "node bot.js"
   },
-  "author": "ByNejdet",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^2.4.1"
-  }
+  "author": "Serhan",
+  "license": "ISC"
 }
